[package]
name = "latex_image"
version = "0.2.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
iced = { version = "0.10.0", features = ["svg", "image", "advanced", "canvas", "tokio"] }
iced_style = "0.9.0"
iced_runtime = "0.1.1"
tokio = { version = "1.32.0", features = ["process", "fs", "io-util"] }
lyon_algorithms = "1.0.3"
once_cell = "1.18.0"
thiserror = "1.0.48"
#tectonic = "0.12.0"
dirs = "5.0.1"
rfd = "0.12.0"
tempdir = "0.3.7"