[package]
name = "latex_image"
version = "0.2.0"
edition = "2021"

[dependencies]
itertools = "0.12.1"
iced = { version = "0.12.1", features = ["svg", "image", "advanced", "canvas", "tokio"] }
tokio = { version = "1.32.0", features = ["process", "fs", "io-util"] }
lyon_algorithms = "1.0.3"
once_cell = "1.18.0"
thiserror = "1.0.48"
#tectonic = "0.12.0"
dirs = "5.0.1"
rfd = "0.14.0"
tempdir = "0.3.7"